# BAWS

./: .gitignore  README.html  README.md  README.txt  __init__.py  baws.py  baws_algorithm.py  baws_provider.py  config.py  plugin_upload.py  pyproject.toml  resources.qrc  utils.py
doc/: algorithm.drawio
etc/: auto_texting.json  baws_cyano_figure.pickle  baws_districts.tiff  latitude_baws10000.npy
etc/prodshp/: empty_file_DATE.shp
etc/prodtext/: cyano_daymap_engtext_BASE_TEXT.txt  cyano_daymap_swetext_BASE_TEXT.txt  cyano_weekmap_engtext_BASE_TEXT.txt  cyano_weekmap_swetext_BASE_TEXT.txt
etc/valid_baws_area/: balticsea_valid_cyano_area.dbf  balticsea_valid_cyano_area.shp  balticsea_valid_cyano_area.shx
handlers/: __init__.py  auto_texting.py  boolean.py  ferry_box.py  jsonH.py  layer.py  map.py  raster.py  reanalysis.py  statistics.py  stw.py  text.py  update_test.py
help/source/: conf.py
readers/: __init__.py  raster.py  shape.py  text.py  wiski.py
src/baws/: Makefile  README.md  TODOs.md  baws_algorithm.py  baws_provider.py  metadata.txt  pb_tool.cfg  requirements.txt  resources.py  resources.qrc  utils.py
src/baws/doc/: merge_process.drawio  system_overview.drawio
src/baws/etc/: baws_settings_template.json  (+2 more)
subprocesses/: __init__.py  create_stw_file.py  delete_and_copy.py  files_ready.py  rasterize.py
test/: test_daymap_union.py  test_generate_filepaths.py  test_poly_within_poly.py  test_round_coords.py  test_spatial_join.py  test_time_it.py  test_weekmap_dissolve.py  test_weekmap_production.py
writers/: __init__.py  shape.py  text.py
(+29 files in other folders)
